Even more plots for thesis

--- a/AllModels.ipynb
+++ b/AllModels.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-05-08T14:58:33.178078Z",
-     "start_time": "2025-05-08T14:58:31.835593Z"
+     "end_time": "2025-05-10T14:44:14.663222Z",
+     "start_time": "2025-05-10T14:44:13.330219Z"
     }
    },
    "source": [
@@ -38,8 +38,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-08T14:58:40.439327Z",
-     "start_time": "2025-05-08T14:58:33.301925Z"
+     "end_time": "2025-05-10T14:47:06.281370Z",
+     "start_time": "2025-05-10T14:46:53.895498Z"
     }
    },
    "cell_type": "code",
@@ -49,20 +49,23 @@
    ],
    "id": "23b931657de69886",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-05T11:57:42.596310Z",
-     "start_time": "2025-05-05T11:57:42.592515Z"
+     "end_time": "2025-05-10T14:47:06.349291Z",
+     "start_time": "2025-05-10T14:47:06.303545Z"
     }
    },
    "cell_type": "code",
    "source": [
     "for i,model in enumerate(models):\n",
+    "    if i != 12:\n",
+    "        continue\n",
     "    print(i, '--------')\n",
-    "    print(model.elements)"
+    "    print(model.elements)\n",
+    "    print(*model.chemnet.reactions,sep=\"\\n\")"
    ],
    "id": "847db4862e81e88f",
    "outputs": [
@@ -70,198 +73,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 --------\n",
-      "name   12    X/H\n",
-      "H     12.000 1.000e+00\n",
-      "He    10.984 9.638e-02\n",
-      "C      7.640 4.365e-05\n",
-      "N      8.900 7.943e-04\n",
-      "O      7.980 9.550e-05\n",
-      "Ne     7.950 8.913e-05\n",
-      "Na     3.360 2.291e-09\n",
-      "Mg     4.030 1.072e-08\n",
-      "Si     4.240 1.738e-08\n",
-      "S      5.270 1.862e-07\n",
-      "Ar     6.080 1.202e-06\n",
-      "Fe     3.240 1.738e-09\n",
-      "PAH    3.444 2.778e-09\n",
-      "\n",
-      "1 --------\n",
-      "name   12    X/H\n",
-      "H     12.000 1.000e+00\n",
-      "He    10.984 9.638e-02\n",
-      "C      7.640 4.365e-05\n",
-      "N      8.900 7.943e-04\n",
-      "O      8.230 1.698e-04\n",
-      "Ne     7.950 8.913e-05\n",
-      "Na     3.360 2.291e-09\n",
-      "Mg     4.030 1.072e-08\n",
-      "Si     4.240 1.738e-08\n",
-      "S      5.270 1.862e-07\n",
-      "Ar     6.080 1.202e-06\n",
-      "Fe     3.240 1.738e-09\n",
-      "PAH    3.444 2.778e-09\n",
-      "\n",
-      "2 --------\n",
-      "name   12    X/H\n",
-      "H     12.000 1.000e+00\n",
-      "He    10.984 9.638e-02\n",
-      "C      7.640 4.365e-05\n",
-      "N      8.900 7.943e-04\n",
-      "O      8.480 3.020e-04\n",
-      "Ne     7.950 8.913e-05\n",
-      "Na     3.360 2.291e-09\n",
-      "Mg     4.030 1.072e-08\n",
-      "Si     4.240 1.738e-08\n",
-      "S      5.270 1.862e-07\n",
-      "Ar     6.080 1.202e-06\n",
-      "Fe     3.240 1.738e-09\n",
-      "PAH    3.444 2.778e-09\n",
-      "\n",
-      "3 --------\n",
-      "name   12    X/H\n",
-      "H     12.000 1.000e+00\n",
-      "He    10.984 9.638e-02\n",
-      "C      7.640 4.365e-05\n",
-      "N      8.900 7.943e-04\n",
-      "O      8.730 5.370e-04\n",
-      "Ne     7.950 8.913e-05\n",
-      "Na     3.360 2.291e-09\n",
-      "Mg     4.030 1.072e-08\n",
-      "Si     4.240 1.738e-08\n",
-      "S      5.270 1.862e-07\n",
-      "Ar     6.080 1.202e-06\n",
-      "Fe     3.240 1.738e-09\n",
-      "PAH    3.444 2.778e-09\n",
-      "\n",
-      "4 --------\n",
-      "name   12    X/H\n",
-      "H     12.000 1.000e+00\n",
-      "He    10.984 9.638e-02\n",
-      "C      7.640 4.365e-05\n",
-      "N      8.900 7.943e-04\n",
-      "O      8.980 9.550e-04\n",
-      "Ne     7.950 8.913e-05\n",
-      "Na     3.360 2.291e-09\n",
-      "Mg     4.030 1.072e-08\n",
-      "Si     4.240 1.738e-08\n",
-      "S      5.270 1.862e-07\n",
-      "Ar     6.080 1.202e-06\n",
-      "Fe     3.240 1.738e-09\n",
-      "PAH    3.444 2.778e-09\n",
-      "\n",
-      "5 --------\n",
-      "name   12    X/H\n",
-      "H     12.000 1.000e+00\n",
-      "He    10.984 9.638e-02\n",
-      "C      7.890 7.762e-05\n",
-      "N      8.900 7.943e-04\n",
-      "O      7.980 9.550e-05\n",
-      "Ne     7.950 8.913e-05\n",
-      "Na     3.360 2.291e-09\n",
-      "Mg     4.030 1.072e-08\n",
-      "Si     4.240 1.738e-08\n",
-      "S      5.270 1.862e-07\n",
-      "Ar     6.080 1.202e-06\n",
-      "Fe     3.240 1.738e-09\n",
-      "PAH    3.444 2.778e-09\n",
-      "\n",
-      "6 --------\n",
-      "name   12    X/H\n",
-      "H     12.000 1.000e+00\n",
-      "He    10.984 9.638e-02\n",
-      "C      7.890 7.762e-05\n",
-      "N      8.900 7.943e-04\n",
-      "O      8.230 1.698e-04\n",
-      "Ne     7.950 8.913e-05\n",
-      "Na     3.360 2.291e-09\n",
-      "Mg     4.030 1.072e-08\n",
-      "Si     4.240 1.738e-08\n",
-      "S      5.270 1.862e-07\n",
-      "Ar     6.080 1.202e-06\n",
-      "Fe     3.240 1.738e-09\n",
-      "PAH    3.444 2.778e-09\n",
-      "\n",
-      "7 --------\n",
-      "name   12    X/H\n",
-      "H     12.000 1.000e+00\n",
-      "He    10.984 9.638e-02\n",
-      "C      7.890 7.762e-05\n",
-      "N      8.900 7.943e-04\n",
-      "O      8.480 3.020e-04\n",
-      "Ne     7.950 8.913e-05\n",
-      "Na     3.360 2.291e-09\n",
-      "Mg     4.030 1.072e-08\n",
-      "Si     4.240 1.738e-08\n",
-      "S      5.270 1.862e-07\n",
-      "Ar     6.080 1.202e-06\n",
-      "Fe     3.240 1.738e-09\n",
-      "PAH    3.444 2.778e-09\n",
-      "\n",
-      "8 --------\n",
-      "name   12    X/H\n",
-      "H     12.000 1.000e+00\n",
-      "He    10.984 9.638e-02\n",
-      "C      7.890 7.762e-05\n",
-      "N      8.900 7.943e-04\n",
-      "O      8.730 5.370e-04\n",
-      "Ne     7.950 8.913e-05\n",
-      "Na     3.360 2.291e-09\n",
-      "Mg     4.030 1.072e-08\n",
-      "Si     4.240 1.738e-08\n",
-      "S      5.270 1.862e-07\n",
-      "Ar     6.080 1.202e-06\n",
-      "Fe     3.240 1.738e-09\n",
-      "PAH    3.444 2.778e-09\n",
-      "\n",
-      "9 --------\n",
-      "name   12    X/H\n",
-      "H     12.000 1.000e+00\n",
-      "He    10.984 9.638e-02\n",
-      "C      7.890 7.762e-05\n",
-      "N      8.900 7.943e-04\n",
-      "O      8.980 9.550e-04\n",
-      "Ne     7.950 8.913e-05\n",
-      "Na     3.360 2.291e-09\n",
-      "Mg     4.030 1.072e-08\n",
-      "Si     4.240 1.738e-08\n",
-      "S      5.270 1.862e-07\n",
-      "Ar     6.080 1.202e-06\n",
-      "Fe     3.240 1.738e-09\n",
-      "PAH    3.444 2.778e-09\n",
-      "\n",
-      "10 --------\n",
-      "name   12    X/H\n",
-      "H     12.000 1.000e+00\n",
-      "He    10.984 9.638e-02\n",
-      "C      8.140 1.380e-04\n",
-      "N      8.900 7.943e-04\n",
-      "O      7.980 9.550e-05\n",
-      "Ne     7.950 8.913e-05\n",
-      "Na     3.360 2.291e-09\n",
-      "Mg     4.030 1.072e-08\n",
-      "Si     4.240 1.738e-08\n",
-      "S      5.270 1.862e-07\n",
-      "Ar     6.080 1.202e-06\n",
-      "Fe     3.240 1.738e-09\n",
-      "PAH    3.444 2.778e-09\n",
-      "\n",
-      "11 --------\n",
-      "name   12    X/H\n",
-      "H     12.000 1.000e+00\n",
-      "He    10.984 9.638e-02\n",
-      "C      8.140 1.380e-04\n",
-      "N      8.900 7.943e-04\n",
-      "O      8.230 1.698e-04\n",
-      "Ne     7.950 8.913e-05\n",
-      "Na     3.360 2.291e-09\n",
-      "Mg     4.030 1.072e-08\n",
-      "Si     4.240 1.738e-08\n",
-      "S      5.270 1.862e-07\n",
-      "Ar     6.080 1.202e-06\n",
-      "Fe     3.240 1.738e-09\n",
-      "PAH    3.444 2.778e-09\n",
-      "\n",
       "12 --------\n",
       "name   12    X/H\n",
       "H     12.000 1.000e+00\n",
@@ -278,202 +89,14 @@
       "Fe     3.240 1.738e-09\n",
       "PAH    3.444 2.778e-09\n",
       "\n",
-      "13 --------\n",
-      "name   12    X/H\n",
-      "H     12.000 1.000e+00\n",
-      "He    10.984 9.638e-02\n",
-      "C      8.140 1.380e-04\n",
-      "N      8.900 7.943e-04\n",
-      "O      8.730 5.370e-04\n",
-      "Ne     7.950 8.913e-05\n",
-      "Na     3.360 2.291e-09\n",
-      "Mg     4.030 1.072e-08\n",
-      "Si     4.240 1.738e-08\n",
-      "S      5.270 1.862e-07\n",
-      "Ar     6.080 1.202e-06\n",
-      "Fe     3.240 1.738e-09\n",
-      "PAH    3.444 2.778e-09\n",
-      "\n",
-      "14 --------\n",
-      "name   12    X/H\n",
-      "H     12.000 1.000e+00\n",
-      "He    10.984 9.638e-02\n",
-      "C      8.140 1.380e-04\n",
-      "N      8.900 7.943e-04\n",
-      "O      8.980 9.550e-04\n",
-      "Ne     7.950 8.913e-05\n",
-      "Na     3.360 2.291e-09\n",
-      "Mg     4.030 1.072e-08\n",
-      "Si     4.240 1.738e-08\n",
-      "S      5.270 1.862e-07\n",
-      "Ar     6.080 1.202e-06\n",
-      "Fe     3.240 1.738e-09\n",
-      "PAH    3.444 2.778e-09\n",
-      "\n",
-      "15 --------\n",
-      "name   12    X/H\n",
-      "H     12.000 1.000e+00\n",
-      "He    10.984 9.638e-02\n",
-      "C      8.390 2.455e-04\n",
-      "N      8.900 7.943e-04\n",
-      "O      7.980 9.550e-05\n",
-      "Ne     7.950 8.913e-05\n",
-      "Na     3.360 2.291e-09\n",
-      "Mg     4.030 1.072e-08\n",
-      "Si     4.240 1.738e-08\n",
-      "S      5.270 1.862e-07\n",
-      "Ar     6.080 1.202e-06\n",
-      "Fe     3.240 1.738e-09\n",
-      "PAH    3.444 2.778e-09\n",
-      "\n",
-      "16 --------\n",
-      "name   12    X/H\n",
-      "H     12.000 1.000e+00\n",
-      "He    10.984 9.638e-02\n",
-      "C      8.390 2.455e-04\n",
-      "N      8.900 7.943e-04\n",
-      "O      8.230 1.698e-04\n",
-      "Ne     7.950 8.913e-05\n",
-      "Na     3.360 2.291e-09\n",
-      "Mg     4.030 1.072e-08\n",
-      "Si     4.240 1.738e-08\n",
-      "S      5.270 1.862e-07\n",
-      "Ar     6.080 1.202e-06\n",
-      "Fe     3.240 1.738e-09\n",
-      "PAH    3.444 2.778e-09\n",
-      "\n",
-      "17 --------\n",
-      "name   12    X/H\n",
-      "H     12.000 1.000e+00\n",
-      "He    10.984 9.638e-02\n",
-      "C      8.390 2.455e-04\n",
-      "N      8.900 7.943e-04\n",
-      "O      8.480 3.020e-04\n",
-      "Ne     7.950 8.913e-05\n",
-      "Na     3.360 2.291e-09\n",
-      "Mg     4.030 1.072e-08\n",
-      "Si     4.240 1.738e-08\n",
-      "S      5.270 1.862e-07\n",
-      "Ar     6.080 1.202e-06\n",
-      "Fe     3.240 1.738e-09\n",
-      "PAH    3.444 2.778e-09\n",
-      "\n",
-      "18 --------\n",
-      "name   12    X/H\n",
-      "H     12.000 1.000e+00\n",
-      "He    10.984 9.638e-02\n",
-      "C      8.390 2.455e-04\n",
-      "N      8.900 7.943e-04\n",
-      "O      8.730 5.370e-04\n",
-      "Ne     7.950 8.913e-05\n",
-      "Na     3.360 2.291e-09\n",
-      "Mg     4.030 1.072e-08\n",
-      "Si     4.240 1.738e-08\n",
-      "S      5.270 1.862e-07\n",
-      "Ar     6.080 1.202e-06\n",
-      "Fe     3.240 1.738e-09\n",
-      "PAH    3.444 2.778e-09\n",
-      "\n",
-      "19 --------\n",
-      "name   12    X/H\n",
-      "H     12.000 1.000e+00\n",
-      "He    10.984 9.638e-02\n",
-      "C      8.390 2.455e-04\n",
-      "N      8.900 7.943e-04\n",
-      "O      8.980 9.550e-04\n",
-      "Ne     7.950 8.913e-05\n",
-      "Na     3.360 2.291e-09\n",
-      "Mg     4.030 1.072e-08\n",
-      "Si     4.240 1.738e-08\n",
-      "S      5.270 1.862e-07\n",
-      "Ar     6.080 1.202e-06\n",
-      "Fe     3.240 1.738e-09\n",
-      "PAH    3.444 2.778e-09\n",
-      "\n",
-      "20 --------\n",
-      "name   12    X/H\n",
-      "H     12.000 1.000e+00\n",
-      "He    10.984 9.638e-02\n",
-      "C      8.640 4.365e-04\n",
-      "N      8.900 7.943e-04\n",
-      "O      7.980 9.550e-05\n",
-      "Ne     7.950 8.913e-05\n",
-      "Na     3.360 2.291e-09\n",
-      "Mg     4.030 1.072e-08\n",
-      "Si     4.240 1.738e-08\n",
-      "S      5.270 1.862e-07\n",
-      "Ar     6.080 1.202e-06\n",
-      "Fe     3.240 1.738e-09\n",
-      "PAH    3.444 2.778e-09\n",
-      "\n",
-      "21 --------\n",
-      "name   12    X/H\n",
-      "H     12.000 1.000e+00\n",
-      "He    10.984 9.638e-02\n",
-      "C      8.640 4.365e-04\n",
-      "N      8.900 7.943e-04\n",
-      "O      8.230 1.698e-04\n",
-      "Ne     7.950 8.913e-05\n",
-      "Na     3.360 2.291e-09\n",
-      "Mg     4.030 1.072e-08\n",
-      "Si     4.240 1.738e-08\n",
-      "S      5.270 1.862e-07\n",
-      "Ar     6.080 1.202e-06\n",
-      "Fe     3.240 1.738e-09\n",
-      "PAH    3.444 2.778e-09\n",
-      "\n",
-      "22 --------\n",
-      "name   12    X/H\n",
-      "H     12.000 1.000e+00\n",
-      "He    10.984 9.638e-02\n",
-      "C      8.640 4.365e-04\n",
-      "N      8.900 7.943e-04\n",
-      "O      8.480 3.020e-04\n",
-      "Ne     7.950 8.913e-05\n",
-      "Na     3.360 2.291e-09\n",
-      "Mg     4.030 1.072e-08\n",
-      "Si     4.240 1.738e-08\n",
-      "S      5.270 1.862e-07\n",
-      "Ar     6.080 1.202e-06\n",
-      "Fe     3.240 1.738e-09\n",
-      "PAH    3.444 2.778e-09\n",
-      "\n",
-      "23 --------\n",
-      "name   12    X/H\n",
-      "H     12.000 1.000e+00\n",
-      "He    10.984 9.638e-02\n",
-      "C      8.640 4.365e-04\n",
-      "N      8.900 7.943e-04\n",
-      "O      8.730 5.370e-04\n",
-      "Ne     7.950 8.913e-05\n",
-      "Na     3.360 2.291e-09\n",
-      "Mg     4.030 1.072e-08\n",
-      "Si     4.240 1.738e-08\n",
-      "S      5.270 1.862e-07\n",
-      "Ar     6.080 1.202e-06\n",
-      "Fe     3.240 1.738e-09\n",
-      "PAH    3.444 2.778e-09\n",
-      "\n",
-      "24 --------\n",
-      "name   12    X/H\n",
-      "H     12.000 1.000e+00\n",
-      "He    10.984 9.638e-02\n",
-      "C      8.640 4.365e-04\n",
-      "N      8.900 7.943e-04\n",
-      "O      8.980 9.550e-04\n",
-      "Ne     7.950 8.913e-05\n",
-      "Na     3.360 2.291e-09\n",
-      "Mg     4.030 1.072e-08\n",
-      "Si     4.240 1.738e-08\n",
-      "S      5.270 1.862e-07\n",
-      "Ar     6.080 1.202e-06\n",
-      "Fe     3.240 1.738e-09\n",
-      "PAH    3.444 2.778e-09\n",
+      "WARN: Could not load reactions from Reactions.out\n",
+      "WARN: Could not load rate coefficients from rate_coeffs_1NZZ.log\n",
+      " \n",
       "\n"
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 13
   },
   {
    "metadata": {
