--- a/Latex/Strw-bsc-minimal.tex
+++ b/Latex/Strw-bsc-minimal.tex
@@ -1,6 +1,8 @@
 \documentclass[twoside, single, authoryear, semicolon]{lion-msc}
 \usepackage{lipsum}
 \usepackage{booktabs}
+\usepackage[version=4]{mhchem}
+
 \title{Identifying Nitrogen Carriers in Planet-Forming Regions of Protoplanetary Disks}
 \author{Niels de Klerk}
 
@@ -38,6 +40,9 @@
 \newcommand{\proj}[1]{\ensuremath{\vert #1 \rangle \langle #1 \vert}}
 
 \newcommand{\kpar}{\ensuremath{k_\parallel}}
+
+\newcommand{\3}{$_3$}
+\newcommand{\2}{$_2$}
 % ----------------------------------------------------------------
 
 % \usepackage{tocloft}
@@ -86,20 +91,20 @@ The height of the disk is also an important factor in its structure. The midplan
 \end{figure}
 
 \section{Disk Chemistry}
-\lipsum[1-8]
+
 \section{Emission Mechanisms}
-\lipsum[1-10]
+
 \section{JWST MIRI MRS}
-\lipsum[1-9]
+
 % \section{Radiative Transfer}
 \section{Modeling}
 Some of the properties of the protoplanetary disks can be directly inferred from disk measurements. For instances where this is not the case, we would still like to learn more from our data via a different method. We can use models to simulate the protoplanetary disk and generate synthetic data to compare to actual observations. There are various types of models. Ranging from 1D slab models to thermo-chemical disk models. For our research, we run simulations using PROtoplanetary DIsk MOdel (ProDiMo), a thermo-chemical disk model. The output of those simulations is then put through Fast Line Tracing system (FLiTs) to get an accurate spectrum of the disk. 
 \section{Goal}
-\lipsum[1-5]
+
 \chapter{Methods}\label{Ch: Methods}
 \section{ProDiMo Simulations}
 
-\begin{table}[!ht]
+\begin{table}[!h]
 \centering
 \begin{tabular}{@{}lll@{}}
                                   &                             &                            \\ \hline\midrule
@@ -123,7 +128,7 @@ Minimum dust particle radius      & a$_{min}$                   & 0.05 $\mu$m   
 Maximum dust particle radius      & a$_{max}$                   & 3000 $\mu$m                \\
 Dust size dist. power index       & a$_{pow}$                   & 3.5                        \\
 Turbulent mixing parameter        & $\alpha_{settle}$           & 0.001                      \\
-Refractory dust composition       & Mg$_{0.7}$Fe$_{0.3}$SiO$_3$ & 60 \%                      \\
+Refractory dust composition       & Mg$_{0.7}$Fe$_{0.3}$SiO\3 & 60 \%                      \\
                                   & amorph. C                   & 15 \%                      \\
                                   & porosity                    & 25 \%                      \\
 PAH abundance rel. to ISM         & f$_{PAH}$                   & 0.01                       \\
@@ -134,8 +139,9 @@ Distance to the observer          & d                           & 140 pc        
 \label{tab:parameters}
 \end{table}
 
+We ran a model grid with varying abundances of C and O using ProDiMo. The parameters with which the models were run are in table \ref{tab:parameters}. The abundances of C and O were varied between -0.5 and 0.5 in steps of 0.25, where 0 corresponds to the solar abundance. The grid contains 25 models, with the fiducial model in the middle, which is based on the solar abundances of C and O.
 
-\begin{table}[!ht]
+\begin{table}[!h]
 \centering
 \begin{tabular}{@{}lll@{}}
                                   &                             &                            \\ \hline\midrule
@@ -158,15 +164,23 @@ PAH              & 3.444                  & Fixed                         \\ \bo
 \label{tab:abundances}
 \end{table}
 
-We ran a model grid with varying abundances of C and O. Each grid contains 25 models, with the fiducial model in the middle, which is based on the solar abundances of C and O. 
+
 
 After running the model grid, we used FLiTs to generate the spectra for all the models. We calculated the entire spectrum containing  \textbf{INSERT EXACT MOLECULES IN THE TOTAL SPECTRUM} and the spectra of individual molecules as well. The spectra we retrieved with FLiTs have an unrealistically high resolution. To make the spectrum more realistic, we convolved the spectrum to a resolving power of 3000 using the \textit{prodimopy.read.DataFLiTsSpec.convolve}\citep{SOURCE}, which convolves the spectrum with a Gaussian kernel to create a spectrum of the correct resolving power. The value of 3000 was chosen as it is approximately the average resolving power of the MIRI MRS \citep{SOURCE}. 
 
 We wanted to add noise to the data to make the simulated spectra as realistic as possible. The MINDS team has observations which have $SNR = 300$ \citep{SOURCE}. We want to make our simulated data follow the same vein. Using the spectrum minimum, we estimate the noise level needed to create an $SNR = 300$. We assume that the noise is normally distributed. After applying this noise, we subtract the continuum to get the actual spectrum we can use to analyse the different molecules that compose it.
 
 
+The flux density we have from FLiTs is in units of Jansky, but we would like to integrate the flux density to get the flux. For this, we need to convert the flux per unit frequency to flux per unit wavelength. We use the equation
+
+\begin{equation}
+    F_\lambda=\frac{c}{\lambda^2}F_\nu
+\end{equation}
+
+\textbf{SPECTRUM CLASSIFICATION}
+
 \section{Cross-Correlation}
-For our analysis, we will use cross-correlation. This is a signal detection technique for detecting weak signals. It is defined as follows. 
+For our analysis, we used cross-correlation. This is a signal detection technique for detecting weak signals. It is defined as follows. 
 \begin{equation}
     R_{fg}(\tau)=\int^\infty_{-\infty}\overline{f(t)}g(t+\tau)dt
 \end{equation}
@@ -176,7 +190,7 @@ The autocorrelation is the cross-correlation of a function with itself
 \end{equation}
 As all our functions are real valued, we can omit the complex conjugation in the integrand.
 
-We will calculate the average spectrum for each species and divide that by the maximum of the spectrum to normalize it. We use this template spectrum to cross-correlate with the spectrum containing all the species. The cross-correlation should peak when the template spectrum matches with the spectrum containing all the species. To quantify the height of the peak, we take the difference between the height of the peak and the median value of the cross-correlation in a small region around the peak. We take the median as this is less susceptible to outliers to capture the general trend around the peak more optimally. We use hypothesis testing to test whether or not there is statistical evidence to say the molecule is present. We have the following null hypothesis and alternative hypothesis
+We calculated the average spectrum for each species and divide that by the maximum of the spectrum to normalize it. We used this template spectrum to cross-correlate with the spectrum containing all the species. The cross-correlation should peak when the template spectrum matches with the spectrum containing all the species. To quantify the height of the peak, we calculated the difference between the height of the peak and the median value of the cross-correlation in a small region around the peak. We took the median as this is less susceptible to outliers to capture the general trend around the peak more optimally. We used hypothesis testing to test whether or not there is statistical evidence to say the molecule is present. We had the following null hypothesis and alternative hypothesis
 
 \begin{equation}
     H_0: \text{The height of the peak in the cross-correlation is caused by noise}
@@ -185,15 +199,9 @@ We will calculate the average spectrum for each species and divide that by the m
     H_1: \text{The height of the peak in the cross-correlation is caused by the molecule}
 \end{equation}
 
-To assess the significance of the peak in cross-correlation, we use a Monte Carlo simulation to simulate 10000 synthetic spectra under the null hypothesis. First, we take all the flux values we have for different wavelength values. Second, we sample with replacement from the flux values until we have a collection of values that is the same size as the original set. Third, we take the cross-correlation and calculate the difference between the height of the peak and the median value of the cross-correlation in a small region around the peak. The value of the original data is deemed significant when it exceeds 95\% of the values from the simulated data ($\alpha=0.05$).
+To assess the significance of the peak in cross-correlation, we used a Monte Carlo simulation to simulate 10000 synthetic spectra under the null hypothesis. First, we take all the flux values we have for different wavelength values. Second, we sample with replacement from the flux values until we have a collection of values that is the same size as the original set. Third, we take the cross-correlation and calculate the difference between the height of the peak and the median value of the cross-correlation in a small region around the peak. The value of the original data is deemed significant when it exceeds 95\% of the values from the simulated data ($\alpha=0.05$).
 
-
-The flux density we have from FLiTs is in units of Jansky, but we would like to integrate the flux density to get the flux. For this, we need to convert the flux per unit frequency to flux per unit wavelength. We use the equation
-
-\begin{equation}
-    F_\lambda=\frac{c}{\lambda^2}F_\nu
-\end{equation}
-
+\textbf{SOMETHING ABOUT REGIONS SELECTION}
 
 
 \section{Observations}
@@ -201,21 +209,21 @@ After looking at the simulated spectra, we wanted to apply our techniques to obs
 1D LTE models to fit the model and try to enhance the hidden molecules
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=0.5\linewidth]{Figures/FullSpectrum_GWLup.pdf}
-    \caption{Caption}
-    \label{fig:enter-label}
+    \includegraphics[width=\linewidth]{Figures/FullSpectrum_GWLup.pdf}
+    \caption{The continuum subtracted spectrum of GWLup}
+    \label{fig:GWLup}
 \end{figure}
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=0.5\linewidth]{Figures/FullSpectrum_Sz98.pdf}
-    \caption{Caption}
-    \label{fig:enter-label}
+    \includegraphics[width=\linewidth]{Figures/FullSpectrum_Sz98.pdf}
+    \caption{The continuum subtracted spectrum of Sz98}
+    \label{fig:Sz98}
 \end{figure}
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=0.5\linewidth]{Figures/FullSpectrum_V1094Sco.pdf}
-    \caption{Caption}
-    \label{fig:enter-label}
+    \includegraphics[width=\linewidth]{Figures/FullSpectrum_V1094Sco.pdf}
+    \caption{The continuum subtracted spectrum of V1094Sco}
+    \label{fig:V1094Sco}
 \end{figure}
 
 
@@ -231,7 +239,7 @@ After running the models, we inspect their output. First, we look at the densiti
     \label{fig:density}
 \end{figure}
 
-Next, we expect the temperature of the gas and dust across the disk. We can see is that the gas temperature is more structured around the midplane. The dust temperature gradient has straight sections above the main body of the disk. This result is also expected as the density of the dust is orders of magnitude lower in the regions above the disk. This results in the starlight getting barely blocked, so the temperature doesn't change across different heights.
+Next, we inspect the temperature of the gas and dust across the disk. We can see is that the gas temperature is more structured around the midplane. The dust temperature gradient has straight sections above the main body of the disk. This result is also expected as the density of the dust is orders of magnitude lower in the regions above the disk. This results in the starlight getting barely blocked, so the temperature doesn't change across different heights.
 
 \begin{figure}[!ht]
     \centering
@@ -240,12 +248,12 @@ Next, we expect the temperature of the gas and dust across the disk. We can see 
     \label{fig:temperature}
 \end{figure}
 
-Lastly, we inspect the distribution of HCN, HNC, NH$_3$, and NO -common nitrogen carriers. We see in figure \ref{fig:nitrogen distribution} that the density of the molecules changes a lot for different radii and heights. For example, in the region between 1, 2 we see that HCN decreases compared to the surrounding regions, but HNC increases in the same region. 
+Lastly, we inspect the distribution of HCN, HNC, NH\3, and NO -common nitrogen carriers. We see in figure \ref{fig:nitrogen distribution} that the density of the molecules changes a lot for different radii and heights. For example, in the region between 1, 2 we see that HCN decreases compared to the surrounding regions, but HNC increases in the same region. 
 
 \begin{figure}[!ht]
     \centering
     \includegraphics[width=\linewidth]{Figures/Abundance.pdf}
-    \caption{The distribution of HCN, HNC, NH$_3$, and NO across the disk of the fiducial model.}
+    \caption{The distribution of HCN, HNC, NH\3, and NO across the disk of the fiducial model.}
     \label{fig:nitrogen distribution}
 \end{figure}
 \section{FLiTs Spectra}
@@ -272,12 +280,29 @@ The flux of the different species changes depending on the abundances of C and O
 \begin{figure}[!ht]
     \centering
     \includegraphics[width=0.5\linewidth]{Figures/NH3_heatmap.pdf}
-    \caption{The total received flux of NH$_3$ for all the models in the grid.}
+    \caption{The total received flux of NH\3 for all the models in the grid.}
     \label{fig:flux NH3}
 \end{figure}
 
-We see that the HCN increases as C/O gets larger, and NO decreases with it. 
+The HCN increases as C/O gets larger, and NO decreases with it. The flux of NH\3 generally increases as the C abundance gets lower. We hypothesize that the reason for this is the reactions that take place to form NH\3.
+We believe that OH is an important component in the formation of NH\3. 
+\ce{NH2+ + OH -> NH3 + O+}
+\textbf{MORE REACTIONS}
 
+Next, we wanted to identify regions in the spectrum that could help us detect NO and NH\3. We split the model grid in 2 groups. One group has C/O smaller than unity and the other greater. We chose this distinction as the behaviors of the spectra is different. This difference is also visible in figure \ref{fig:all spectra). 
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=\linewidth]{Classification c/o>1.pdf}
+    \caption{Caption}
+    \label{fig:class>1}
+\end{figure}
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=\linewidth]{Classification c/o<1.pdf}
+    \caption{Caption}
+    \label{fig:class<1}
+\end{figure}
+In both figure \ref{fig:class<1} and figure \ref{fig:class>1}
 \begin{figure}[!ht]
     \centering
     \includegraphics[width=\linewidth]{NO region of interest.pdf}
@@ -296,7 +321,7 @@ We see that the HCN increases as C/O gets larger, and NO decreases with it.
     \caption{Caption}
     \label{fig:enter-label}
 \end{figure}
-
+All the spectra in figures \ref{} are without any noise. When we add noise to the spectra based on the methods described we get \ref{}. In this figure we see that the signal get completely washed out in the noise. So it would be hard to detect it. 
 \begin{figure}[!ht]
     \centering
     \includegraphics[width=\linewidth]{Adding noise.pdf}
@@ -305,21 +330,21 @@ We see that the HCN increases as C/O gets larger, and NO decreases with it.
 \end{figure}
 
 \section{Molecule Detection}
-\lipsum[1-3]
+
 \begin{figure}[!ht]
     \centering
     \includegraphics[width=\linewidth]{cross-correlation.pdf}
     \caption{Caption}
     \label{fig:enter-label}
 \end{figure}
-\lipsum[1-8]
+
 
 \section{Application on Observations}
-\lipsum[1-5]
+
 \chapter{Discussion}
-\lipsum[1-10]
+
 \chapter{Conclusion}
-\lipsum[1-4]
+
 \bibliographystyle{aa.bst}
 \bibliography{references}
 \end{document}
