--- a/ClassifySpectralRegions.ipynb
+++ b/ClassifySpectralRegions.ipynb
@@ -193,8 +193,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T17:48:44.109964Z",
-     "start_time": "2025-05-10T17:48:40.505020Z"
+     "end_time": "2025-05-10T22:29:51.204884Z",
+     "start_time": "2025-05-10T22:29:48.958527Z"
     }
    },
    "cell_type": "code",
@@ -216,7 +216,7 @@
     "plt.yticks([])\n",
     "plt.title('C/O>1')\n",
     "# plt.xlim(4.9, 6.5)\n",
-    "plt.savefig('Figures/ClassificationCOgt0.pdf', bbox_inches='tight')\n",
+    "plt.savefig('Figures/ClassificationCOgt0.pdf', bbox_inches='tight', dpi=600)\n",
     "plt.show()"
    ],
    "id": "94a86db4c48aa1b7",
@@ -232,7 +232,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 41
+   "execution_count": 44
   },
   {
    "metadata": {
@@ -276,8 +276,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T17:48:59.057496Z",
-     "start_time": "2025-05-10T17:48:56.169660Z"
+     "end_time": "2025-05-10T22:29:43.223189Z",
+     "start_time": "2025-05-10T22:29:41.736821Z"
     }
    },
    "cell_type": "code",
@@ -300,7 +300,7 @@
     "plt.yticks([])\n",
     "plt.title('C/O<1')\n",
     "# plt.xlim(18, 20.1)\n",
-    "plt.savefig('Figures/ClassificationCOst0.pdf', bbox_inches='tight')\n",
+    "plt.savefig('Figures/ClassificationCOst0.pdf', bbox_inches='tight', dpi=600)\n",
     "plt.show()"
    ],
    "id": "dbe2d29fa20d8243",
@@ -316,7 +316,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 42
+   "execution_count": 43
   }
  ],
  "metadata": {
